fixed navbar flicker

--- a/src/styles/menubar.module.scss
+++ b/src/styles/menubar.module.scss
@@ -9,11 +9,6 @@
 	/*padding-right: 6px;*/
 }
 
-.image_container {
-	width: 52px;
-	height: 52px;
-}
-
 .nav_toggle:hover {
 	background-color: transparent !important;
 	color: $light !important;
